--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -43,6 +43,14 @@ theme:
     - search.suggest
     - search.highlight
     - content.code.copy
+  logo: assets/ake-uoa-k8s-party.gif
+  favicon: assets/ake-uoa-k8s-party.gif
+  font: false
+
+copyright: Copyright &copy; 2024 The University of Auckland
+
+extra_css:
+  - stylesheets/extra.css
 
 markdown_extensions:
   - attr_list
