feat: revamp contribution experience
- Add CODE_OF_CONDUCT.md (Contributor Covenant v2.1)
- Rewrite CONTRIBUTING.md with community focus
- Update README.md with community section
- Enable 'Edit this page' in mkdocs.yml
- Add Contributing and Code of Conduct to site navigation

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,6 +2,7 @@ site_name: UoA Research AI GPU Platform
 site_url: https://drai-inn.github.io/uoa-ai-gpu-docs/
 repo_url: https://github.com/drai-inn/uoa-ai-gpu-docs
 repo_name: drai-inn/uoa-ai-gpu-docs
+edit_uri: edit/main/docs/
 
 nav:
   - Home: index.md
@@ -11,6 +12,9 @@ nav:
     - LLMs on NeSI: guides/llm-on-nesi.md
   - Reference:
     - Benchmarks: reference/benchmarks.md
+  - Community:
+    - Contributing: contributing.md
+    - Code of Conduct: code_of_conduct.md
 
 theme:
   name: material
