fix: enable edit button and fix broken links
- Explicitly enable 'content.action.edit' feature in mkdocs.yml to show edit button
- Fix case-sensitive link to code_of_conduct.md in contributing.md

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -47,6 +47,7 @@ theme:
     - search.suggest
     - search.highlight
     - content.code.copy
+    - content.action.edit
   logo: assets/ake-uoa-k8s-party.gif
   favicon: assets/ake-uoa-k8s-party.gif
   font: false
