--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -20,6 +20,14 @@ jobs:
           python-version: '3.12'
       - name: Install dependencies
         run: python -m pip install -r requirements.txt
+      - name: Configure Preview URL
+        run: |
+          PR_NUMBER=${{ github.event.number }}
+          REPO_OWNER=${{ github.repository_owner }}
+          REPO_NAME=${{ github.event.repository.name }}
+          PREVIEW_URL="https://${REPO_OWNER}.github.io/${REPO_NAME}/previews/pr-${PR_NUMBER}/"
+          echo "Setting site url to: $PREVIEW_URL"
+          sed -i "s|url = \".*\"|url = \"$PREVIEW_URL\"|g" zensical.toml
       - name: Build docs
         run: zensical build
       - name: Deploy preview
