--- a/zensical.toml
+++ b/zensical.toml
@@ -7,6 +7,12 @@ url = "https://github.com/drai-inn/uoa-ai-gpu-docs"
 name = "drai-inn/uoa-ai-gpu-docs"
 edit_uri = "edit/main/docs/"
 
+[nav]
+Home = "index.md"
+Guides = "guides/"
+Platform = "platform/"
+Reference = "reference/"
+
 [theme]
 name = "zensical"
 logo = "assets/ake-uoa-k8s-party.gif"
